Minor changes to divide docId space
Signed-off-by: expani <anijainc@amazon.com>